# GeoGuessr-Backend

./: .env  .env.example  .gitignore  Makefile  docker-compose.monitoring.yml  docker-compose.yml  readme.md  requirements.txt
.github/workflows/: CD.yml  CI.yml  github-actions.yml
docs/: index.html  search.js
documentation/: DOCUMENTATION_SETUP.md  how_to_start.md  openapi_doc.md  system_overview.md
k8s/: .how-to-use.md  auth.yaml  game.yaml  image.yaml  mongo.yaml  mysql.yaml  notification.yaml  rabbitmq.yaml  score.yaml
kubernetes/: auth.yaml  game.yaml  image.yaml  mysql.yaml  notification.yaml  rabbitmq.yaml  score.yaml
prometheus/: alerts.yml  config.yml  how-to-use-prometheus.md  prometheus.yml
server/: docker-compose.yml
server/login/: Dockerfile  README.md  deployment.yaml  index.js  service.yaml
server/shared/: info.txt
services/auth_service/: .env  Dockerfile  db.py  jwt_handler.py  main.py  models.py  rabbitmq.py  requirements.txt
services/game_service/: Dockerfile  game_logic.py  main.py  message_handler.py  requirements.txt
services/image_service/: main.py
services/leaderboards/: Dockerfile
services/notification_service/: Dockerfile  main.py  requirements.txt
services/notification_service/app/: consumer.py  db.py  index.py  leaderboard_state.py  mail.py  mailer.py  main.py  models.py  pyproject.toml  rabbitmq_noti.py  top10.py
services/notification_service/app/templates/: dropped_out_of_top10.txt  new_highscore.txt  registration.txt
services/score_service/: Dockerfile  main.py
shared/: message_broker.py
(+28 files in other folders)
